# spotrak

./: .env.example  .gitignore  .mcp.json  Cargo.toml  DEPLOYMENT.md  README.md  cornucopia.toml  deno.json  flake.nix  shell.nix
db/spotrak-codegen/: Cargo.toml
db/spotrak-codegen/src/: queries.rs
migrations/: 0001_initial.sql  0002_link_import_events.sql  0003_runtime_and_spotify_cache.sql  0004_public_token_value.sql  0005_hour_format.sql  0006_response_cache_and_spotify_queue.sql  0007_oauth_pkce.sql  0008_security_and_queue_hardening.sql
nix/: darwin.nix  nixos.nix  options.nix  package.nix  web.nix
queries/: health.sql
src/: app.rs  config.rs  db.rs  error.rs  main.rs  state.rs
src/auth/: extractors.rs  mod.rs  oauth.rs  public_tokens.rs  sessions.rs
src/domain/: catalog.rs  ids.rs  import.rs  mod.rs  player.rs  settings.rs  spotify.rs  stats.rs  time.rs  user.rs
src/dto/: mod.rs  openapi.rs  requests.rs  responses.rs
src/jobs/: import_worker.rs  mod.rs  scheduler.rs  spotify_poller.rs
src/repositories/: catalog.rs  imports.rs  listening_events.rs  mod.rs  oauth_states.rs  public_tokens.rs  response_cache.rs  search.rs  sessions.rs  settings.rs  spotify_queue.rs  users.rs
src/routes/: admin.rs  auth.rs  catalog.rs  health.rs  imports.rs  metrics.rs  mod.rs  player.rs  public.rs  spotify.rs  stats.rs  users.rs
src/services/: artist_hydration.rs  auth.rs  imports.rs  ingestion.rs  mod.rs  player.rs  playlists.rs  poller.rs  spotify_client.rs  stats.rs  token_crypto.rs  users.rs
src/test_support/: fixtures.rs
web/: .env.example  .oxlintrc.json  astro.config.mjs  components.json  server.ts  tsconfig.json
web/src/: env.d.ts  middleware.ts
(+103 files in other folders)
