[package]
name = "spotrak_backend"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bin]]
name = "spotrak"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-gzip",
  "cors",
  "fs",
  "set-header",
  "trace"
] }

sqlx = { version = "0.8", default-features = false, features = [
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls"
] }

anyhow = "1"
dotenvy = "0.15"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

aes-gcm = "0.10"
base64 = "0.22"
cookie = "0.18"
rand = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
sha2 = "0.10"

clap = { version = "4", features = ["derive", "env"] }
prometheus-client = "0.23"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
pretty_assertions = "1"
rstest = "0.24"
serial_test = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
wiremock = "0.6"
